# flexislicer

./: .gitignore  QuickCurve.html  README.md  out_canopy_compare.json  out_canopy_planar_compare.json  out_flex_benchmark_k1_vs_k2.json  out_openhole_fea_proxy.json  out_openhole_fea_proxy_floor.json  pyproject.toml
experiments/: handcode_slope_gcode.py  k2_campaign.py
notes/: anchor_solve_template.md  aniso_objective_design.md  benchmark_a_multidepth.md  benchmark_b_anisotropy.md  blend_rationale.md  default_parameters.md  extrusion_compensation.md  failure_cases_multidepth.md  integration_plan.md  low_rank_field.md  metric_component_alignment.md  rejected_ideas.md  related_work_matrix.md  section_order.md  target_extraction.md  thickness_schedule.md
paper/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_representation.tex  04_constraints.tex  05_target_extraction.tex  06_anchor_solve.tex  07_integration.tex  08_anisotropy.tex  09_evaluation.tex  10_comparison.tex  11_limitations.tex  12_contributions.tex  appendix_a_pseudocode.tex
presentation/: build_csef_presentation.py  generate_findings_page2_graphs.py  generate_sample_findings_graphs.py  generate_sample_strength_graphs.py  presentation_config.json
quickcurve/: __init__.py  __main__.py  cli.py  prusa.py  solver.py
