[project]
name = "quickcurve-python"
version = "0.1.0"
description = "Reference Python implementation of QuickCurve-style slightly non-planar slicing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "trimesh>=4.0",
  "rtree>=1.2",
  "scikit-image>=0.22",
]

[project.scripts]
quickcurve = "quickcurve.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quickcurve"]
